apps/argocd/base/tailscale-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-tailscale
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd
  annotations:
    tailscale.com/hostname: "argo"
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  loadBalancerClass: tailscale
  type: LoadBalancer
