apps/argocd/base/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-tailscale
            port:
              name: http
  tls:
  - hosts:
    - argocd.gruber.dev.br
    secretName: argocd-tls
